fix: update android adaptive icon background color to match theme

--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#232C3F"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.buahgiias.basicappnative"
